// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateWallet should render 1`] = `
<DocumentFragment>
  <div
    class="max-w-xl py-16 mx-auto"
  >
    <form
      class="space-y-8"
      data-testid="Form"
    >
      <div>
        <ul
          class="StepIndicator___StyledUl-sc-15t41is-1 dhAbBb"
        >
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 crUtTP"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
        </ul>
        <div
          class="mt-4"
        >
          <div
            data-testid="tab-pabel__active-panel"
          >
            <section
              class="space-y-8"
              data-testid="CreateWallet__first-step"
            >
              <div
                class="my-8"
              >
                <div
                  class="flex items-end justify-between bg-theme-background"
                >
                  <div>
                    <h1
                      class="mb-0 md:text-4xl"
                      data-testid="header__title"
                    >
                      Select a Cryptoasset
                    </h1>
                    <div
                      class="text-theme-neutral-dark"
                      data-testid="header__subtitle"
                    >
                      Select a cryptoasset to create your new wallet address
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="space-y-2"
              >
                <span
                  class="text-theme-neutral-dark text-sm font-medium"
                >
                  Network
                </span>
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-1-label"
                  class="relative"
                  role="combobox"
                >
                  <label
                    for="downshift-1-input"
                    id="downshift-1-label"
                  />
                  <div
                    class="relative flex items-center w-full flex-inline"
                  >
                    <div
                      class="flex w-full border rounded transition-colors duration-200 shadow-sm bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
                    >
                      <div
                        class="px-4 py-2 flex-0 w-14"
                      >
                        <div
                          class="sc-AxhUy iJOgmr border-theme-neutral-200"
                        />
                      </div>
                      <div
                        class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
                      >
                        <div
                          class="relative z-10 w-full"
                          data-testid="select-network__typeahead-"
                        >
                          <div
                            class="absolute left-0 font-semibold top-2 text-theme-neutral-400"
                          />
                        </div>
                        <input
                          aria-autocomplete="list"
                          aria-labelledby="downshift-1-label"
                          autocomplete="off"
                          class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                          data-testid="select-asset__input"
                          id="downshift-1-input"
                          placeholder="Enter a network name"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    aria-labelledby="downshift-1-label"
                    class="select-asset__items"
                    data-testid="select-asset__items"
                    id="downshift-1-menu"
                    role="listbox"
                  >
                    <div
                      aria-selected="false"
                      class="inline-block pt-6 mr-6 cursor-pointer"
                      id="downshift-1-item-0"
                      role="option"
                    >
                      <div
                        class="sc-AxhUy iZkFLc text-theme-danger-400 border-theme-danger-200"
                      >
                        <div
                          class="sc-AxjAm jakjmk"
                          height="26"
                          width="26"
                        >
                          <svg>
                            ark.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-selected="false"
                      class="inline-block pt-6 mr-6 cursor-pointer"
                      id="downshift-1-item-1"
                      role="option"
                    >
                      <div
                        class="sc-AxhUy iZkFLc text-theme-warning-400 border-theme-warning-200"
                      >
                        <div
                          class="sc-AxjAm jakjmk"
                          height="26"
                          width="26"
                        >
                          <svg>
                            btc.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-selected="false"
                      class="inline-block pt-6 mr-6 cursor-pointer"
                      id="downshift-1-item-2"
                      role="option"
                    >
                      <div
                        class="sc-AxhUy iZkFLc text-theme-neutral-800 border-theme-neutral-600"
                      >
                        <div
                          class="sc-AxjAm jakjmk"
                          height="26"
                          width="26"
                        >
                          <svg>
                            eth.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-selected="false"
                      class="inline-block pt-6 mr-6 cursor-pointer"
                      id="downshift-1-item-3"
                      role="option"
                    >
                      <div
                        class="sc-AxhUy iZkFLc text-theme-primary-600 border-theme-primary-400"
                      >
                        <div
                          class="sc-AxjAm jakjmk"
                          height="26"
                          width="26"
                        >
                          <svg>
                            lsk.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-selected="false"
                      class="inline-block pt-6 mr-6 cursor-pointer"
                      id="downshift-1-item-4"
                      role="option"
                    >
                      <div
                        class="sc-AxhUy iZkFLc text-theme-primary-700 border-theme-primary-500"
                      >
                        <div
                          class="sc-AxjAm jakjmk"
                          height="26"
                          width="26"
                        >
                          <svg>
                            xrp.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="flex justify-end mt-10 space-x-3"
          >
            <button
              class="sc-AxhCb BegvR"
              color="primary"
              data-testid="CreateWallet__back-button"
              disabled=""
              type="button"
            >
              Back
            </button>
            <button
              class="sc-AxhCb gBCygf"
              color="primary"
              data-testid="CreateWallet__continue-button"
              disabled=""
              type="button"
            >
              Continue
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`CreateWallet should render 1st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="CreateWallet__first-step"
  >
    <div
      class="my-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div>
          <h1
            class="mb-0 md:text-4xl"
            data-testid="header__title"
          >
            Select a Cryptoasset
          </h1>
          <div
            class="text-theme-neutral-dark"
            data-testid="header__subtitle"
          >
            Select a cryptoasset to create your new wallet address
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <span
        class="text-theme-neutral-dark text-sm font-medium"
      >
        Network
      </span>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-0-label"
        class="relative"
        role="combobox"
      >
        <label
          for="downshift-0-input"
          id="downshift-0-label"
        />
        <div
          class="relative flex items-center w-full flex-inline"
        >
          <div
            class="flex w-full border rounded transition-colors duration-200 shadow-sm bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
          >
            <div
              class="px-4 py-2 flex-0 w-14"
            >
              <div
                class="sc-AxhUy iJOgmr border-theme-neutral-200"
              />
            </div>
            <div
              class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
            >
              <div
                class="relative z-10 w-full"
                data-testid="select-network__typeahead-"
              >
                <div
                  class="absolute left-0 font-semibold top-2 text-theme-neutral-400"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-labelledby="downshift-0-label"
                autocomplete="off"
                class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                data-testid="select-asset__input"
                id="downshift-0-input"
                placeholder="Enter a network name"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-0-label"
          class="select-asset__items"
          data-testid="select-asset__items"
          id="downshift-0-menu"
          role="listbox"
        >
          <div
            aria-selected="false"
            class="inline-block pt-6 mr-6 cursor-pointer"
            id="downshift-0-item-0"
            role="option"
          >
            <div
              class="sc-AxhUy iZkFLc text-theme-danger-400 border-theme-danger-200"
            >
              <div
                class="sc-AxjAm jakjmk"
                height="26"
                width="26"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            aria-selected="false"
            class="inline-block pt-6 mr-6 cursor-pointer"
            id="downshift-0-item-1"
            role="option"
          >
            <div
              class="sc-AxhUy iZkFLc text-theme-warning-400 border-theme-warning-200"
            >
              <div
                class="sc-AxjAm jakjmk"
                height="26"
                width="26"
              >
                <svg>
                  btc.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            aria-selected="false"
            class="inline-block pt-6 mr-6 cursor-pointer"
            id="downshift-0-item-2"
            role="option"
          >
            <div
              class="sc-AxhUy iZkFLc text-theme-neutral-800 border-theme-neutral-600"
            >
              <div
                class="sc-AxjAm jakjmk"
                height="26"
                width="26"
              >
                <svg>
                  eth.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            aria-selected="false"
            class="inline-block pt-6 mr-6 cursor-pointer"
            id="downshift-0-item-3"
            role="option"
          >
            <div
              class="sc-AxhUy iZkFLc text-theme-primary-600 border-theme-primary-400"
            >
              <div
                class="sc-AxjAm jakjmk"
                height="26"
                width="26"
              >
                <svg>
                  lsk.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            aria-selected="false"
            class="inline-block pt-6 mr-6 cursor-pointer"
            id="downshift-0-item-4"
            role="option"
          >
            <div
              class="sc-AxhUy iZkFLc text-theme-primary-700 border-theme-primary-500"
            >
              <div
                class="sc-AxjAm jakjmk"
                height="26"
                width="26"
              >
                <svg>
                  xrp.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`CreateWallet should render 2nd step 1`] = `
<DocumentFragment>
  <section
    data-testid="CreateWallet__second-step"
  >
    <div
      class="my-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div>
          <h1
            class="mb-0 md:text-4xl"
            data-testid="header__title"
          >
            Your Passphrase
          </h1>
        </div>
      </div>
    </div>
    <div
      class="space-y-8"
    >
      <div
        class="flex rounded-lg overflow-hidden bg-theme-warning"
      >
        <div
          class="sc-AxiKw eRaQyX flex items-center justify-center text-theme-warning bg-theme-warning-200"
        >
          <div
            class="sc-AxjAm bIZXgI"
            height="30"
            width="30"
          >
            <svg>
              alert-default.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-AxirZ iyxqHr flex-1 bg-theme-warning-100"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, optio ipsum, porro in dolore ex ab iste labore illo perferendis maiores. Ratione quo ipsa adipisci repellendus consectetur ipsam facere nostrum.
        </div>
      </div>
      <ul
        class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 row-gap-5 col-gap-3"
      >
        <li
          class="relative px-3 py-3 border rounded border-theme-neutral-light"
          data-testid="MnemonicList__item"
        >
          <span
            class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
          >
            1
          </span>
          <span
            class="font-medium text-theme-neutral-800"
          >
            lorem
          </span>
        </li>
        <li
          class="relative px-3 py-3 border rounded border-theme-neutral-light"
          data-testid="MnemonicList__item"
        >
          <span
            class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
          >
            2
          </span>
          <span
            class="font-medium text-theme-neutral-800"
          >
            ipsum
          </span>
        </li>
        <li
          class="relative px-3 py-3 border rounded border-theme-neutral-light"
          data-testid="MnemonicList__item"
        >
          <span
            class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
          >
            3
          </span>
          <span
            class="font-medium text-theme-neutral-800"
          >
            dolor
          </span>
        </li>
        <li
          class="relative px-3 py-3 border rounded border-theme-neutral-light"
          data-testid="MnemonicList__item"
        >
          <span
            class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
          >
            4
          </span>
          <span
            class="font-medium text-theme-neutral-800"
          >
            sit
          </span>
        </li>
        <li
          class="relative px-3 py-3 border rounded border-theme-neutral-light"
          data-testid="MnemonicList__item"
        >
          <span
            class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
          >
            5
          </span>
          <span
            class="font-medium text-theme-neutral-800"
          >
            amet
          </span>
        </li>
        <li
          class="relative px-3 py-3 border rounded border-theme-neutral-light"
          data-testid="MnemonicList__item"
        >
          <span
            class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
          >
            6
          </span>
          <span
            class="font-medium text-theme-neutral-800"
          >
            consectetur
          </span>
        </li>
      </ul>
      <div
        class="flex justify-end w-full"
      >
        <button
          class="sc-AxhCb BegvR"
          color="primary"
          data-testid="CreateWallet__copy"
          type="button"
        >
          <div
            class="sc-AxjAm cpczEI"
            height="1em"
            width="1em"
          >
            <svg>
              copy.svg
            </svg>
          </div>
          <span>
            Copy
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-AxgMl fujBvH border-theme-neutral-300"
      type="horizontal"
    />
    <div
      class="py-3"
    >
      <div
        class="flex justify-between"
      >
        <div>
          <h3
            class="text-theme-neutral-dark mb-1"
          >
            Your password in the file
          </h3>
          <p
            class="text-theme-neutral"
          >
            You can also download and store safely your passphrase.
          </p>
        </div>
        <div
          class="sc-AxjAm hoUaGk"
          height="40"
          width="40"
        >
          <svg>
            file-password.svg
          </svg>
        </div>
      </div>
      <div
        class="flex justify-end w-full"
      >
        <button
          class="sc-AxhCb BegvR flex items-center mt-4 space-x-2"
          color="primary"
          data-testid="CreateWallet__download"
          type="button"
        >
          <div
            class="sc-AxjAm cpczEI"
            height="1em"
            width="1em"
          >
            <svg>
              download.svg
            </svg>
          </div>
          <span>
            Download
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-AxgMl fujBvH border-theme-neutral-300"
      type="horizontal"
    />
  </section>
</DocumentFragment>
`;

exports[`CreateWallet should render 4th step 1`] = `
<DocumentFragment>
  <section
    data-testid="CreateWallet__fourth-step"
  >
    <div
      class="my-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div>
          <h1
            class="mb-0 md:text-4xl"
            data-testid="header__title"
          >
            Completed
          </h1>
          <div
            class="text-theme-neutral-dark"
            data-testid="header__subtitle"
          >
            Wallet creation is complete. Now you can use it.
          </div>
        </div>
      </div>
    </div>
    <ul>
      <li
        class="flex justify-between"
      >
        <div>
          <p
            class="text-theme-neutral-dark text-sm font-semibold"
          >
            Network
          </p>
          <p
            class="text-lg font-medium"
            data-testid="CrateWallet__network-name"
          >
            ARK Ecosystem
          </p>
        </div>
        <div
          class="sc-AxhUy fHeTTV"
        >
          <div
            class="sc-AxjAm cpczEI"
            height="1em"
            width="1em"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </li>
      <li>
        <div
          class="sc-AxgMl fujBvH border-theme-neutral-300"
          type="horizontal"
        />
      </li>
      <li
        class="flex justify-between"
      >
        <div>
          <p
            class="text-theme-neutral-dark text-sm font-semibold"
          >
            Address
          </p>
          <p
            class="text-lg font-medium"
          >
            D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax
          </p>
        </div>
        <div
          class="sc-AxhUy fHeTTV"
        />
      </li>
    </ul>
    <div
      class="sc-AxgMl fujBvH border-theme-neutral-300"
      type="horizontal"
    />
    <fieldset
      class="sc-AxheI dThsOi flex flex-col space-y-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="name"
        label="Wallet name (optional)"
      >
        Wallet name (optional)
      </label>
      <input
        class="sc-Axmtr kvuvxq overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
        data-testid="CreateWallet__wallet-name"
        name="name"
      />
    </fieldset>
  </section>
</DocumentFragment>
`;
